--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   },
   "require": {
     "php": ">7.0",
-    "composer-plugin-api": "^1.0"
+    "composer-plugin-api": "^1.0|^2.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "@stable",
